--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,10 +1,7 @@
-<h1>Editing tweet</h1>
+<h1 class="display-2 page-title my-5">Editing tweet</h1>
 
-<%= render "form", tweet: @tweet %>
+<%= render "form", tweet: @tweet, class: "" %>
 
-<br>
 
-<div>
-  <%= link_to "Show this tweet", @tweet %> |
-  <%= link_to "Back to tweets", tweets_path %>
-</div>
+
+ 
