--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,27 +1,50 @@
-<%= form_with(model: tweet) do |form| %>
-  <% if tweet.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(tweet.errors.count, "error") %> prohibited this tweet from being saved:</h2>
+<!--HTML para tweets tomado de https://dev.to/codingnepal/twitter-tweet-box-with-character-limit-highlighting-in-html-css-javascript-2ai8-->
 
-      <ul>
-        <% tweet.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+<div class="tweet-form">
+  <%= form_with(model: tweet)  do |form| %>
+    <% if tweet.errors.any? %>
+      <div style="color: red">
+        <h2><%= pluralize(tweet.errors.count, "error") %> prohibited this tweet from being saved:</h2>
+
+        <ul>
+          <% tweet.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+    
+    <div class="wrapper">
+      <div class="input-box">
+        <div class="tweet-area">
+          <%= form.text_field :user_name, class:"tweet-username", placeholder:"¿Who are you?"%>
+          <%= form.text_area :description, class:"tweet-text", placeholder:"¿What's happening?"%>
+          
+        </div>
+        <div class="privacy">
+          <i class="fas fa-globe-asia"></i>
+          <span>Everyone can reply</span>
+        </div>
+      </div>
+      <div class="bottom">
+        <ul class="icons">
+          <li><i class="uil uil-capture"></i></li>
+          <li><i class="far fa-file-image"></i></li>
+          <li><i class="fas fa-map-marker-alt"></i></li>
+          <li><i class="far fa-grin"></i></li>
+          <li><i class="far fa-user"></i></li>
+          
+        </ul>
+        <div class="content">
+          <span class="counter">100</span>
+          <div>
+            <%= form.submit class:"create-button"  %>
+      
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
   <% end %>
+</div>
 
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_field :description %>
-  </div>
-
-  <div>
-    <%= form.label :username, style: "display: block" %>
-    <%= form.text_field :user_name %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
