--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,9 +1,4 @@
-<h1>New tweet</h1>
+<h1 class="display-2 page-title my-5">New tweet</h1>
 
 <%= render "form", tweet: @tweet %>
 
-<br>
-
-<div>
-  <%= link_to "Back to tweets", tweets_path %>
-</div>
