--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,10 +1,5 @@
-<p style="color: green"><%= notice %></p>
 
+<h1 class="display-2 page-title my-5"><%= @tweet.user_name %> tweeted: </h1>
 <%= render @tweet %>
 
-<div>
-  <%= link_to "Edit this tweet", edit_tweet_path(@tweet) %> |
-  <%= link_to "Back to tweets", tweets_path %>
 
-  <%= button_to "Destroy this tweet", @tweet, method: :delete %>
-</div>
